--- a/src/components/BottomSheet.css
+++ b/src/components/BottomSheet.css
@@ -47,6 +47,10 @@
   animation: bottom-sheet-slide-in 0.25s ease forwards;
 }
 
+.bottom-sheet .selectable-list-item[data-position] .selectable-list-item-divider {
+  background: var(--color-purple-600);
+}
+
 .bottom-sheet[data-open='false'] {
   animation: bottom-sheet-slide-out 0.25s ease forwards;
 }
